--- a/public/components/dashboard/dashboard.html
+++ b/public/components/dashboard/dashboard.html
@@ -1,1 +1,17 @@
-<h1 class='text-center'>Welcome</h1>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-4 col-xs-4" ng-repeat="p in productList.groups">
+            <div class="cards">
+                <div class="cards-offer">
+                    {{p.messages[0]}}
+                </div>
+                <div class='cards-content'>
+                    <img  class="img-thumbnail" ng-src="{{p.hero.href}}" alt="Card image cap" >
+                    <div>
+                        <p>{{p.name}}.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
