--- a/public/components/dashboard/dashboard.css
+++ b/public/components/dashboard/dashboard.css
@@ -1,27 +1,100 @@
-.cards {
-    width: fit-content;
-    padding-left: 2%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-right: 2%;
-    border: 1px solid #d2d6d8;
-    position: relative;
-    color: white;
-    margin-bottom: 2%;
+a {
+    text-decoration: none;
+}
+
+a:hover,
+active {
+    text-decoration: none;
+}
+
+.card-header {
+    font-size: large;
+    border-bottom-color: transparent;
+    overflow: hidden;
+    white-space: nowrap;
+    color: black;
+    background: white;
+}
+
+.hero-image {
+    width: 100%;
 }
 
 .cards-offer {
-    top: 4%;
+    top: 10%;
+    left: 4%;
     width: 32%;
     height: auto;
     background: #03A9F4;
-    left: 64%;
     position: absolute;
     border: 1px solid #03A9F4;
-    border-radius: 4%;
     display: inline-block;
+    color: white;
+    font-size: xx-large;
+    z-index: 999;
 }
 
-.img-thumbnail {
-    border: none;
+.cards-cart-button {
+    background: #ea4c4c;
+    border-color: #ea4c4c;
+
+}
+
+.cards-cart-button:hover,
+active {
+    background: #f54949;
+    border-color: #f54949;
+
+}
+
+.cards-price {
+    top: 84%;
+    left: 4%;
+    /* width: 89%; */
+    width: 92%;
+    height: auto;
+    background: #242627;
+    position: absolute;
+    border: 1px solid #03A9F4;
+    display: inline-block;
+    color: white;
+    font-size: xx-large;
+    z-index: 999;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-right: 1%;
+    padding-left: 1%;
+}
+
+
+/*Img Hover CSS*/
+img {
+    /* filter: url(filters.svg#grayscale); Firefox 3.5+ */
+    filter: gray;
+    /* IE5+ */
+    -webkit-filter: grayscale(1);
+    /* Webkit Nightlies & Chrome Canary */
+    -webkit-transition: all .8s ease-in-out;
+}
+
+img:hover {
+    filter: none;
+    -webkit-filter: grayscale(0);
+    -webkit-transform: scale(1.01);
+}
+
+
+/*overwrite Panel*/
+.panel.panel-info {
+    border: 1px solid #3e3c3c;
+}
+
+.panel-body {
+    padding: 0;
+}
+
+.panel-heading {
+    color: white !important;
+    background-color: #55aced !important;
+    border-color: #55aced !important;
 }
