--- a/public/components/dashboard/templates/product-detail.html
+++ b/public/components/dashboard/templates/product-detail.html
@@ -20,11 +20,11 @@
           </div>
             <!-- Ratings -->
             <div class="offer">
-                <a href class="inline offer-1st">{{productDetail.messages[0]}}</a>
-                <a href class="inline">{{productDetail.messages[1]}}</a>
+                <a href class="inline offer-text">{{productDetail.messages[0]}}</a>
+                <a href class="inline offer-text">{{productDetail.messages[1]}}</a>
             </div>
             <div class="cart-button">
-            <button class="btn btn-primary pull-right cards-cart-button btn-block">
+            <button class="btn btn-primary pull-right cards-cart-button">
                 <i class="fa fa-cart-plus" aria-hidden="true"></i>
                 &nbsp;Add To Cart
             </button>
