--- a/public/components/dashboard/dashboard.css
+++ b/public/components/dashboard/dashboard.css
@@ -21,17 +21,18 @@ active {
 }
 
 .cards-offer {
-    top: 14%;
-    left: 6%;
-    width: 32%;
-    height: auto;
+   top: 15%;
+    left: 7%;
+    width: 34%;
+    height: 22%;
     background: #03A9F4;
     position: absolute;
     border: 1px solid #03A9F4;
     display: inline-block;
     color: white;
-    font-size: xx-large;
+    font-size: medium;
     z-index: 999;
+    border-radius: 3px;
 }
 
 .cards-cart-button {
@@ -51,11 +52,11 @@ active {
     top: 84%;
     left: 4%;
     /* width: 89%; */
-    width: 92%;
+    width: 91%;
     height: auto;
     background: #242627;
     position: absolute;
-    border: 1px solid #03A9F4;
+    border: 1px solid #484848;
     display: inline-block;
     color: white;
     font-size: xx-large;
@@ -124,6 +125,12 @@ img:hover {
     padding-right: 1%;
 }
 
+.offer-text
+{
+    position: relative;
+    display: block;
+}
+
 
 .height-19 {
     height: 19%;
@@ -146,7 +153,7 @@ img:hover {
     padding-bottom: 1%;
     padding-right: 1%;
     padding-left: 1%;
-    top: 76%;
+    top: 67%;
 }
 
 .ratings {
@@ -155,25 +162,30 @@ img:hover {
     position: relative;
 }
 
-.offer-1st {
-    top: 8%;
-    position: absolute;
-}
-
 
 .stars {
     display: inline-block;
     width: 40%;
+    font-size: medium;
+
 }
 
 .social {
     display: inline-block;
-    width: 45%;
+    width: 70%;
     top: -2%;
     position: absolute;
+    font-size: medium;
 }
 
+.price
+{
+    display: inline-block;
+}
 
-
+.cart-button
+{
+    display: contents;
+}
 
 
