FIxed UI Cetral Issue

--- a/public/components/dashboard/dashboard.html
+++ b/public/components/dashboard/dashboard.html
@@ -4,7 +4,7 @@
             <div class="panel-group">
                 <a href ng-click="gotoProductDetails($index,p)">
                     <div class="panel panel-info">
-                        <div class="panel-heading card-header text-center">{{p.name}}</div>
+                        <div class="panel-heading card-header text-center">{{p.name}}&nbsp;{{p.nameAttribute}}</div>
                         <div class="panel-body" title={{p.name}}>
                         <div class="cards-offer">
                         {{p.messages[0]}}
